--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="main/style.css" />
+  <meta content="max win generator !!" property="og:title" />
+  <meta content="FREE ROULETTE CHEAT!!!! WORKS!!!" property="og:description" />
+  <meta content="https://neet.gay/" property="og:url" />
+  <meta content="https://tenor.com/view/explain-gif-22827027" property="og:image" />
+  <meta content="#3a31d8" data-react-helmet="true" name="theme-color" />
 </head>
 
 <body>
