--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta content="max win generator !!" property="og:title" />
   <meta content="FREE ROULETTE CHEAT!!!! WORKS!!!" property="og:description" />
   <meta content="https://neet.gay/" property="og:url" />
-  <meta content="https://cdn.discordapp.com/attachments/760599521364279336/1212624860396781629/7612e2e354ade9bb788cfa5336293957.jpg?ex=65f283e8&is=65e00ee8&hm=1e8385d39f5c0be123c10f84116c967dd78a47b0ee1465e0d2fe025ab459623c&" property="og:image" />
+  <meta content="https://neet.gay/img/image.png" property="og:image" />
   <meta content="#3a31d8" data-react-helmet="true" name="theme-color" />
 </head>
 
